# rc5

./: .gitignore  CMakeLists.txt
Ausarbeitung/: .gitignore  Ausarbeitung.bcf  Ausarbeitung.run.xml  Ausarbeitung.tex  Literatur.bib
Ausarbeitung/bib/: Literatur.bib
Implementierung/: .gitignore  Makefile  bufferio.c  bufferio.h  enlighten.c  key_expansion.S  key_expansion.c  perf.c  perf.h  rc5.S  rc5.c  rc5.h  test.c  test.h
Implementierung/references/: rfc2040.c  rfc2040.h  schneier.c
